@@ -1,5 +1,15 @@
 2011-04-23  Stefano Lattarini  <stefano.lattarini@gmail.com>
 
+	java tests: tweak and make stricter a couple of tests
+	* tests/javasubst.test: Use proper m4 quoting.  Add trailing `:'
+	command.  Enable `errexit' shell flag, and related changes.
+	Prefer cat + here-doc over echo to append to configure.in.
+	Make grepping of Makefile.in stricter.  Add debugging output.
+	Improve heading comments.
+	* tests/javaprim.test: Likewise.
+
+2011-04-23  Stefano Lattarini  <stefano.lattarini@gmail.com>
+
 	java coverage: add test on uninstall with JAVA primary
 	* tests/java-uninstall.test: New test.
 	* tests/Makefile.am (TESTS): Update.
